--- a/styles.css
+++ b/styles.css
@@ -240,3 +240,7 @@ input[type="range"] {
 .switch > input:checked:disabled + span::after {
  background-color: #b56161;
 }
+
+.hidden{
+  display: none;
+}
